pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobImport6.pkl
// prevention of CVE-2010-2632
res = import*("../*/../*/../*/../*/../*/../*/../*.")
